src/test/deca/context/invalid/created/rule2.2/listdeclclass.deca
// Résultat erreur:
//    22:6
//    classe ou type déjà déclaré (règle 1.3)

// Description:
//    Programme incorrect contextuellement - Erreur dans la gestion de l'environnement des types pour les déclarations de classe

// Auteur:
//    Jerome

// Historique:
//    Créé le 16/01/2024

class A {
    
}

class B {
   
}

class A { 
   
}
